[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wechat_publisher"
version = "0.1.0"
description = "一键将 Markdown 渲染为精美公众号格式并上传"
readme = "README.md"
requires-python = ">=3.7"
dependencies = []

[tool.setuptools.package-data]
"wechat_publisher.wechat_publisher" = ["*.js", "package.json"]